--- a/atv5.html
+++ b/atv5.html
@@ -26,7 +26,7 @@
 </body>
 <footer>
     <h5>Contato</h5>
-    <p>Raissa Brenda Oliveira Rodrigues da Silva</p>
-    <p>raissa741@gmail.com</p>
+    Raissa Brenda Oliveira Rodrigues da Silva<br>
+    Email:raissa741@gmail.com
 </footer>
 </html>
